tests-integration/tests/custom/syntax-error/missing-token-03/stderr.expected
Error: model.eprime:1:13:
  |
1 | letting x be
  |             ^
Missing Expression


